# esp32-ld2420

./: .gitignore  CMakeLists.txt  README.md  esp32-logger.cmd  esp32-logger.ps1  partitions.csv  sdkconfig.defaults
components/ld2420/: CMakeLists.txt  ld2420.c  ld2420.h
main/: CMakeLists.txt  http_server.c  http_server.h  ld2420.c  ld2420.h  main.c  main.h  wifi.c  wifi.h
